[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "digestlite"
version = "0.1.0"
description = "Zero-dep wrapper unifying hash + HMAC + base32/64 with a streaming API."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Nripanka Das" }]
requires-python = ">=3.10"
keywords = ["hash", "hmac", "sha256", "sha512", "blake2", "base32", "base64", "digest"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/nripankadas07/digestlite"
Source   = "https://github.com/nripankadas07/digestlite"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
digestlite = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
branch = true
source = ["digestlite"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]
